# cursor-codex-router

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cursor_codex_router/: __init__.py  __main__.py  agent_runner.py  catalog.py  cli.py  config.py  effort_map.py  model_identity.py  paths.py  router.py
systemd/: cursor-codex-router.service
tests/: test_agent_runner.py  test_catalog.py  test_cli.py  test_config.py  test_effort_map.py  test_model_identity.py  test_router.py
